Don't show "Show all passwords" context menu item in the guest mode and on Chrome internal pages.

Basically it should not appear if password filling is disabled. In addition the
guest mode should also suppress the item as it leads to nowhere.

Bug: 865917
Change-Id: Id260341e381ab99d364daf8819f7f07cd350b141
Reviewed-on: https://chromium-review.googlesource.com/1205030
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Reviewed-by: Vadym Doroshenko <dvadym@chromium.org>
Reviewed-by: Istiaque Ahmed <lazyboy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589899}
Former-commit-id: d37da64fcceee283713d649aa8733e669601f5e8