components/password_manager/core/browser/password_manager_util.h
@@ -81,7 +81,8 @@ bool ManualPasswordGenerationEnabled(
 // Returns true iff the "Show all saved passwords" option should be shown in
 // Context Menu. Also records metric, that the Context Menu will have "Show all
 // saved passwords" option.
-bool ShowAllSavedPasswordsContextMenuEnabled();
+bool ShowAllSavedPasswordsContextMenuEnabled(
+    password_manager::PasswordManagerDriver* driver);
 
 // Opens Password Manager setting page and records the metrics.
 void UserTriggeredShowAllSavedPasswordsFromContextMenu(
